--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '3.3.1'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.3.1'
 
+    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
 
 }
 
